--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Commune Waitlist</title>
     <link rel="stylesheet" href="./css/style.css">
     <link rel="icon" href="./Assets/Illustration.png" type="image/x-icon">
-    <script src="./js/jquery.js"></script>
+    <script src="./js/JQuery 3.6.0.js"></script>
 </head>
 <body>
     <div class="header">
